apps/dev/glambychyna/service.yml
apiVersion: v1
kind: Service
metadata:
  name: glambychyna-service
  namespace: glambychyna
spec:
  type: LoadBalancer
  selector:
    app: glambychyna
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
