apps/dev/glambychyna/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glambychyna-ingress
  namespace: glambychyna
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: chyna.alfredbrowniii.io
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: glambychyna-service
            port: 
              number: 8080
